# ges2

./: .gitmodules  LICENSE  meson.build
docs/: ges-2.0.markdown  ges-sections.txt  meson.build  update_slate.sh
docs/example_docs/: object_set_inpoint.markdown  set_object_duration.markdown  set_object_inpoint.markdown  set_object_video_track_index.markdown
docs/handwritten/: introduction.markdown
docs/markdown_doc_pages/: meson.build
docs/slate_markdown_doc_pages/: meson.build
examples/C/: meson.build  object_set_inpoint.c  set_object_duration.c  set_object_inpoint.c  set_object_video_track_index.c
examples/python/: set_object_duration.py  set_object_inpoint.py  set_object_video_track_index.py
ges/: ges-clip.c  ges-clip.h  ges-composition-bin.c  ges-composition-bin.h  ges-editable.c  ges-editable.h  ges-enums.c  ges-enums.h  ges-internal.h  ges-object.c  ges-object.h  ges-playable.c  ges-playable.h  ges-source.c  ges-source.h  ges-test-clip.c  ges-test-clip.h  ges-test-source.c  ges-test-source.h  ges-timeline.c  ges-timeline.h  ges-track.c  ges-track.h  ges-transition.c  ges-transition.h  ges-uri-clip.c  ges-uri-clip.h  ges-uri-source.c  ges-uri-source.h  ges.c  ges.h  meson.build
gst-plugins/: ges-smart-audio-mixer.c  ges-smart-audio-mixer.h  ges-smart-video-mixer.c  ges-smart-video-mixer.h  gstframepositioner.c  gstframepositioner.h  gstges.c  gstgessource.c  gstgessource.h  gstsamplecontroller.c  gstsamplecontroller.h  meson.build
nle/: meson.build  nlecomposition.c  nleghostpad.c  nleobject.c  nleobject.h  nleoperation.c  nlesource.c
tests/: ges.c  meson.build  test-utils.c  test-utils.h  test_clip.c  test_live_src.c  test_serializing.c  test_source.c  test_tracks.c
tools/: ges-launch.c  ges-launcher.c  ges-launcher.h  ges-structure-parser.c  ges-structure-parser.h  meson.build  utils.c  utils.h
